# Baukasten.old

./: .gitignore  CMakeLists.txt  CONCEPT  Doxyfile  README  README.md  TODO
example/: CMakeLists.txt  global.h  main.cpp
example/actions/: render_scene.cpp
example/eisenfaust/: CMakeLists.txt
example/eisenfaust/entities/: basic_type.cpp  basic_type.h  city.cpp  city.h  game.h  unit.cpp  unit.h  world_map.cpp  world_map.h
example/eisenfaust/forms/: city_form.cpp  city_form.h  form2d.cpp  form2d.h  menu_form.h
example/eisenfaust/lua/: bindings.h
example/eisenfaust/scripts/: die.lua  hit.lua  move_down_on_map.lua  move_right_on_map.lua
example/entities/: city.cpp  city.h  example_game.cpp  example_game.h  game.cpp  game.h  unit.cpp  world_map.cpp
example/forms/: city_form.cpp  city_form.h  form2d.cpp  menu_form.cpp  menu_form.h  ogre_form.cpp  ogre_form.h  world_map_form.cpp  world_map_form.h  worldmap_form.cpp  worldmap_form.h
example/lua/: bindings.h
example/scripts/: add_exp.lua  die.lua  hit.lua  move_left_on_map.lua  move_right_on_map.lua  update_state.lua
example/tetris/: .gitignore  CMakeLists.txt  actions.h  block_form.cpp  block_form.h  field_form.cpp  field_form.h  form2d.cpp  form2d.h  game.cpp  game.h  main.cpp  score_form.cpp  score_form.h
example/tetris/media/: display.tga  display.xcf
example/tetris/scripts/: move_left.lua  move_right.lua  next_block.lua  rotate.lua  rotate_left.lua  rotate_right.lua
examples/: CMakeLists.txt
examples/tetris/: CMakeLists.txt  actions.h  block_form.cpp  block_form.h  constants.h  field_form.cpp  field_form.h  form2d.cpp  form2d.h  game.cpp  game.h  info_form.h  score_form.cpp  score_form.h
examples/tetris/scripts/: rotate.lua
src/: CMakeLists.txt  abstract_space.cpp  abstract_space.h  entity.h  game.cpp  game.h  global.h  logical_space.cpp  logical_space.h  main.cpp  object.h  renderable_entity.h  renderable_object.h  virtual_space.cpp  virtual_space.h
src/audio/: Audio  AudioImpl  AudioInterface  CMakeLists.txt  Global  IAudio
src/audio/include/: audio_interface.h  global.h  iaudio.h
src/audio/src/: audio_interface.cpp
src/core/: ActionLua  Assert  CMakeLists.txt  Colour  Core  CoreServices  Drawable  GameEntity  GenericManager  Global  IServiceInterface  LogicalSpace  StateManager  Timer  TimerInterface  Version  abstract_space.cpp  abstract_space.h  action.h  entity.h  form.cpp  form.h  game.cpp  game.h  global.h  logical_space.h  renderable_entity.h  state.h  virtual_space.h
src/core/doc/: index.html
src/core/include/: abstract_manager.h  abstract_space.h  action.h  action_lambda.h  action_lua.h  action_manager.h  actions_manager.h  assert.h  color.h  colour.h  core_services.h  debug.h  drawable.h  entity.h  entity_manager.h  entity_type.h  font.h  form.h  game.h  game_entity.h  gameentity_manager.h  generic_manager.h  generic_state.h  global.h  global_lua.h  inc_actions.h  inc_objects.h  inc_states.h  iservice_interface.h  logical_space.h  math.h  object.h  object_manager.h  objects_manager.h  observer.h  renderable_entity.h  state.h  state_manager.h  states_manager.h  timer.h  (+3 more)
src/core/src/: abstract_space.cpp  action.cpp  action_lambda.cpp  action_lua.cpp  action_manager.cpp  actions_manager.cpp  color.cpp  colour.cpp  core_services.cpp  drawable.cpp  entity.cpp  entity_manager.cpp  entity_type.cpp  font.cpp  form.cpp  game.cpp  game_entity.cpp  gameentity_manager.cpp  generic_state.cpp  inc_actions.cpp  inc_objects.cpp  inc_states.cpp  logical_space.cpp  object.cpp  object_manager.cpp  objects_manager.cpp  observer.cpp  state.cpp  state_manager.cpp  states_manager.cpp  timer.cpp  timer_interface.cpp  version.cpp  virtual_space.cpp
src/example/: CMakeLists.txt  actions.h  entities.cpp  entities.h  entity_types.cpp  entity_types.h  example_game.cpp  example_game.h  frame_listener.cpp  frame_listener.h  main.cpp  states.cpp  states.h  unit.h
src/example/actions/: actions.h  render_scene.cpp  render_scene.h
src/example/entities/: entities.cpp  entities.h  entity_types.cpp  entity_types.h  example_game.cpp  example_game.h  unit.cpp  unit.h  world_map.cpp  world_map.h
src/example/forms/: ogre_form.cpp  ogre_form.h  world_map_form.cpp  world_map_form.h
src/example/scripts/: hit_action.lua  level_up.lua
src/graphics/: CMakeLists.txt  Font  Global  Graphics  GraphicsImpl  GraphicsInterface  IFont  IGraphics  IMesh  ITexture  MeshImpl
src/graphics/include/: font.h  global.h  graphics_interface.h  ifont.h  igraphics.h  image.h  image_functions.h  image_helper.h  imesh.h  itexture.h
src/graphics/src/: colour.cpp  font.cpp  graphics_interface.cpp  image.cpp  imesh.cpp
src/input/: CMakeLists.txt  Global  IInput  Input  InputImpl  InputInterface
src/input/include/: global.h  iinput.h  input_interface.h
src/input/src/: iinput.cpp  input_interface.cpp
src/io/: CMakeLists.txt  Global  IO
src/io/include/: file.h  global.h
src/io/src/: file.cpp
src/math/: CMakeLists.txt  Global  Math  Matrix  Quaternion  Random  Vector  Vector2  Vector3
src/math/include/: global.h  matrix.h  quaternion.h  random.h  vector.h  vector2.h  vector3.h
src/math/src/: matrix.cpp  quaternion.cpp  random.cpp  vector2.cpp  vector3.cpp
src/model/: Action  ActionLambda  ActionManager  Bindings  CMakeLists.txt  Entity  EntityManager  EntityType  Form  GenericState  Model  ModelInterface  State  VirtualSpace
src/model/include/: action.h  action_lambda.h  action_manager.h  core_services.h  debug.h  drawable.h  entity.h  entity_manager.h  entity_type.h  form.h  game_entity.h  generic_manager.h  generic_state.h  global.h  logical_space.h  model_interface.h  state.h  state_manager.h  virtual_space.h
src/model/src/: action.cpp  action_lambda.cpp  drawable.cpp  (+12 more)
src/services/: CMakeLists.txt  IService  Services
src/util/: Util
test/: CMakeLists.txt  actionmanager_test.h  color_test.h  colour_test.h  entity_test.h  file_test.h  game_entity_test.h  image_test.h  main.cpp  math_test.h  matrix_test.h  random_test.h  timer_test.h  vector2_test.h  vector3_test.h  vector_test.h
test/files/: file_test.txt
(+48 files in other folders)
